Refactoring and nominatim integration
